[package]
name = "shpool"
version = "0.1.0"
edition = "2021"
authors = ["Ethan Pailes <pailes@google.com>", "Cloudtop Connectivity Team"]
description = '''
shpool is a mechanism for establishing lightweight persistant shell
sessions to gracefully handle network disconnects
'''

[dependencies]
clap = { version = "3", features = ["derive"] } # cli parsing
anyhow = "1" # dynamic, unstructured errors
log = "0.4" # logging facade
fern = "0.6" # logging implementation
chrono = "0.4" # getting current time and formatting it
serde = "1" # config parsing, connection header formatting
serde_derive = "1" # config parsing, connection header formatting
toml = "0.5" # config parsing
byteorder = "1" # endianness
rmp-serde = "1" # MessagePack serde adapter
ctrlc = { version = "3", features = ["termination"] } # graceful shutdown
nix = { version = "0.25", features = ["poll"] } # rusty wrapper for unix apis
pty = { git = "https://github.com/ethanpailes/pty-rs", version = "0.2.5"} # spawning shells in ptys
termios = "0.3" # configuring terminal flags
lazy_static = "1" # globals
crossbeam-channel = "0.5" # channels
atty = "0.2" # checking if we are connected to a terminal

[dev-dependencies]
tempfile = { git = "https://github.com/ethanpailes/tempfile", branch = "disown" } # keeping tests hermetic
regex = "1" # test assertions
