[package]
name = "shpool"
version = "0.9.3"
edition = "2021"
authors = ["Ethan Pailes <pailes@google.com>"]
repository = "https://github.com/shell-pool/shpool"
readme = "../README.md"
description = '''
shpool is a mechanism for establishing lightweight persistant shell
sessions to gracefully handle network disconnects.
'''
license = "Apache-2.0"
keywords = ["tmux", "tty", "terminal", "shell", "persistence"]
rust-version = "1.74"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4", features = ["derive"] } # cli parsing
anyhow = "1" # dynamic, unstructured errors
libshpool = { version = "0.9.3", path = "../libshpool" }

[dev-dependencies]
lazy_static = "1" # globals
crossbeam-channel = "0.5" # channels
tempfile = "3" # keeping tests hermetic
regex = "1" # test assertions
serde_json = "1" # json parsing
ntest = "0.9" # test timeouts

# rusty wrapper for unix apis
[dependencies.nix]
version = "0.30"
features = ["poll", "ioctl", "process", "signal", "fs"]
